--- a/public/blog/client/views/home/home.view.html
+++ b/public/blog/client/views/home/home.view.html
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
     <h1>STARFALL BLOG</h1>
     <h2 style="color:green">Welcome to Starfall Blog!</h2>
-    <p ng-if="currentUser">
+    <p ng-if="currentUser" style="text-align: center">
         Welcome {{currentUser.username}}
     </p>
     <a href="#register">
