--- a/public/blog/client/views/article/create.view.html
+++ b/public/blog/client/views/article/create.view.html
@@ -13,12 +13,12 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputBody" class="col-sm-2 control-label">Password</label>
+                <label for="inputBody" class="col-sm-2 control-label">Content: </label>
                 <div class="col-sm-8">
-                    <textarea ng-model="article.body" class="form-control" id="inputBody" rows="10"></textarea>
+                    <div text-angular ng-model="article.body" id="inputBody"></div>
+                    <!--<textarea ng-model="article.body" class="form-control" id="inputBody" rows="10"></textarea>-->
                 </div>
             </div>
-
 
             <div ng-if="topics.length > 0" class="form-group">
                 <label for="inputTitle" class="col-sm-2 control-label">Categories: </label>
