--- a/public/blog/client/views/article/list.view.html
+++ b/public/blog/client/views/article/list.view.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="article-body">
-                {{article.body}}
+                <div ng-bind-html="article.body.substring(0, 150)"></div>
                 <div class="article-meta-details">
                     <small>
                         Created by: Starfall,
