--- a/public/blog/client/views/login/login.view.html
+++ b/public/blog/client/views/login/login.view.html
@@ -1,13 +1,30 @@
-<h2>Login</h2>
+<h2 align="center">Login</h2>
 
 <div ng-show="model.error"  class="alert alert-danger"  role="alert">{{model.error}}</div>
 
-<input ng-model="model.user.username"
-       class="form-control"
-       placeholder="username"/>
-<input ng-model="model.user.password"
-       type="password"
-       placeholder="password"
-       class="form-control"/>
 
-<button ng-click="model.login(model.user);" class="btn btn-primary btn-block">Login</button>
+<form class="form-horizontal">
+    <div class="form-group">
+        <label for="inputName" class="col-sm-2 control-label">Username: </label>
+        <div class="col-sm-10">
+            <input ng-model="model.user.username"
+                   class="form-control"
+                   placeholder="username" id="inputName"/>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
+        <div class="col-sm-10">
+            <input ng-model="model.user.password"
+                   type="password"
+                   placeholder="password"
+                   class="form-control" id="inputPassword"/>
+        </div>
+    </div>
+
+    <div class="col-sm-offset-2">
+    <button ng-click="model.login(model.user);" class="btn btn-primary btn-block">Login</button>
+    </div>
+</form>
+
