--- a/public/blog/client/views/register/register.view.html
+++ b/public/blog/client/views/register/register.view.html
@@ -1,19 +1,53 @@
-<h2>Register</h2>
+<h2 align="center">Register</h2>
 
 <div ng-show="model.message" class="alert alert-success" role="alert">{{model.message}}</div>
 <div ng-show="model.error" class="alert alert-danger"  role="alert">{{model.error}}</div>
 
-<input ng-model="model.user.username"
-       class="form-control"
-       placeholder="username"/>
-<input ng-model="model.user.password"
-       type="password"
-       placeholder="password"
-       class="form-control"/>
-<input ng-model="model.user.password2"
-       type="password"
-       placeholder="verify password"
-       class="form-control"/>
+<form class="form-horizontal">
+    <div class="form-group">
+        <label for="inputName" class="col-sm-2 control-label">Username: </label>
+        <div class="col-sm-10">
+            <input ng-model="model.user.username"
+                   class="form-control"
+                   placeholder="username"
+                   id="inputName"/>
+        </div>
+    </div>
 
-<button ng-click="model.register(model.user);"
-        class="btn btn-primary btn-block">Register</button>
+    <div class="form-group">
+        <label for="inputPassword" class="col-sm-2 control-label">Password: </label>
+        <div class="col-sm-10">
+            <input ng-model="model.user.password"
+                   type="password"
+                   placeholder="password"
+                   class="form-control"
+                   id="inputPassword"/>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="inputPassword2" class="col-sm-2 control-label">Verify Password: </label>
+        <div class="col-sm-10">
+            <input ng-model="model.user.password2"
+                   type="password"
+                   placeholder="verify password"
+                   class="form-control"
+                   id="inputPassword2"/>
+
+        </div>
+    </div>
+
+    <div class="col-sm-offset-2">
+    <button ng-click="model.register(model.user);"
+            class="btn btn-primary btn-block">Register</button>
+        </div>
+</form>
+
+
+
+
+
+
+
+
+
