--- a/public/blog/client/views/header/header.view.html
+++ b/public/blog/client/views/header/header.view.html
@@ -51,6 +51,7 @@
                             <li><a href="#profile/{{currentUser._id}}">View your profile</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#user">Users</a></li>
+                            <li><a href="#admin">Admin</a></li>
                         </ul>
                     </li>
                 </ul>
