--- a/public/blog/client/views/article/list.view.html
+++ b/public/blog/client/views/article/list.view.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="article-body">
-                <div ng-bind-html="article.body.substring(0, 150)"></div>
+                <div ng-bind-html="article.body"></div>
                 <div class="article-meta-details">
                     <small>
                         Created by: Starfall,
@@ -37,8 +37,8 @@
                     </small>
                 </div>
             </div>
-            <p>Categories: <span class="badge">
-                <a href="#">waterzone</a>
+            <p>Categories: <span class="badge" ng-repeat="category in article.categories">
+                <a href="#">{{category}}</a>
             </span></p>
             <div class="article-actions">
                 <a class="btn btn-xs btn-primary" href="#/article/{{article._id}}/edit">Edit this article</a>
