--- a/public/blog/client/views/category/list.view.html
+++ b/public/blog/client/views/category/list.view.html
@@ -1,1 +1,33 @@
-<h1 align="center">{{category}}</h1>
+<h1 align="center" style="margin-bottom: 30px">{{category}}</h1>
+
+<!--<div ng-repeat="index in pages">-->
+<div ng-repeat="article in articles">
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+            <div class="well well-lg">
+                <div class="article-title">
+                    <a href="#/article/{{article._id}}">{{article.title}}</a>
+                </div>
+
+                <div class="article-body">
+                    <div ng-bind-html="article.body.substring(0, 150)"></div>
+                    <div class="article-meta-details">
+                        <small>
+                            Created by: Starfall,
+                            about 2 months ago,
+                            last updated: 20days ago
+                        </small>
+                    </div>
+                </div>
+                <p>Categories: <span class="badge" ng-repeat="category in article.categories">
+                <a href="#">{{category}}</a>
+            </span></p>
+                <div class="article-actions">
+                    <a class="btn btn-xs btn-primary" href="#/article/{{article._id}}/edit">Edit this article</a>
+                    <a class="btn btn-xs btn-danger" ng-click="deleteArticle(article)" type="submit">Delete this article</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
