--- a/public/blog/client/views/footer/about.view.html
+++ b/public/blog/client/views/footer/about.view.html
@@ -2,4 +2,10 @@
 
 <h2 style="text-align: center">This is the class project for the CS5610 course.</h2>
 
+<h3 style="text-align: center">User1: alice, Key: alice</h3>
+
+<h3 style="text-align: center">Admin User: bob, Key: bob</h3>
+
+<h3></h3>
+
 <h3 align="center"><a href="#/home">Home</a></h3>
