--- a/public/blog/client/views/category/category.view.html
+++ b/public/blog/client/views/category/category.view.html
@@ -1,22 +1,20 @@
 <h1 style="text-align: center">All Categories</h1>
 
-<div class="container">
+<div class="container" style="margin-top: 40px">
 <div align="center">
-    <div class="pagination"><ul class="pagination"><li class="prev previous_page disabled"><a href="#">&#8592; Previous</a></li> <li class="active"><a rel="start" href="/categories?page=1">1</a></li> <li><a rel="next" href="/categories?page=2">2</a></li> <li class="next next_page "><a rel="next" href="/categories?page=2">Next &#8594;</a></li></ul></div>
-    <div ng-repeat="category in categories">
+     <div ng-repeat="category in categories">
     <ul class=listing>
         <div class="row">
             <div class="well col-md-4 col-md-offset-4">
                 <li class="article-title">
-                    <a href="#">{{category.category}}</a>
+                    <a href="#category/{{category.category}}">{{category.category}}</a>
                 </li>
-                <li>
-                    <small>3 articles</small>
-                </li>
+                <!--<li>-->
+                    <!--<small>{{category.number}} articles</small>-->
+                <!--</li>-->
             </div>
         </div>
     </ul>
     </div>
-    <div class="pagination"><ul class="pagination"><li class="prev previous_page disabled"><a href="#">&#8592; Previous</a></li> <li class="active"><a rel="start" href="/categories?page=1">1</a></li> <li><a rel="next" href="/categories?page=2">2</a></li> <li class="next next_page "><a rel="next" href="/categories?page=2">Next &#8594;</a></li></ul></div>
-</div>
+  </div>
 </div>
