--- a/public/blog/client/views/register/register.view.html
+++ b/public/blog/client/views/register/register.view.html
@@ -37,6 +37,18 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label for="inputEmail" class="col-sm-2 control-label">Email(Optional): </label>
+        <div class="col-sm-10">
+            <input ng-model="model.user.email"
+                   type="email"
+                   placeholder="email"
+                   class="form-control"
+                   id="inputEmail"/>
+
+        </div>
+    </div>
+
     <div class="col-sm-offset-2">
     <button ng-click="model.register(model.user);"
             class="btn btn-primary btn-block">Register</button>
