fix list show bug

--- a/public/blog/client/views/footer/about.view.html
+++ b/public/blog/client/views/footer/about.view.html
@@ -4,7 +4,9 @@
 
 <h3 style="text-align: center">User1: alice, Key: alice</h3>
 
-<h3 style="text-align: center">Admin User: bob, Key: bob</h3>
+<h3 style="text-align: center">Admin user: bob, Key: bob</h3>
+
+<h3 style="text-align: center">User with Gravatar image: starfall, Key: starfall</h3>
 
 <h3></h3>
 
