--- a/public/blog/client/views/article/list.view.html
+++ b/public/blog/client/views/article/list.view.html
@@ -44,7 +44,7 @@
                 <a ng-show="isAuthor(article)" class="btn btn-xs btn-primary"
                    href="#/article/{{article._id}}/edit">
                     Edit this article</a>
-                <a ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-xs btn-danger"
+                <a ng-show="isAuthor(article) || currentUser.roles.indexOf('admin') >= 0" class="btn btn-xs btn-danger"
                    ng-click="deleteArticle(article)" type="submit">
                     Delete this article
                 </a>
