modify date --START

--- a/public/blog/client/views/article/list.view.html
+++ b/public/blog/client/views/article/list.view.html
@@ -31,9 +31,8 @@
                 <div ng-bind-html="article.body"></div>
                 <div class="article-meta-details">
                     <small>
-                        Created by: Starfall,
-                        about 2 months ago,
-                        last updated: 20days ago
+                        Created time: about 1 day ago,
+                        last updated: 1 day ago
                     </small>
                 </div>
             </div>
