--- a/public/blog/client/views/category/list.view.html
+++ b/public/blog/client/views/category/list.view.html
@@ -13,9 +13,8 @@
                     <div ng-bind-html="article.body.substring(0, 150)"></div>
                     <div class="article-meta-details">
                         <small>
-                            Created by: Starfall,
-                            about 2 months ago,
-                            last updated: 20days ago
+                            Created time: about 1 day ago,
+                            last updated: 1 day ago
                         </small>
                     </div>
                 </div>
@@ -36,3 +35,5 @@
         </div>
     </div>
 </div>
+
+
