change about introduction

--- a/public/blog/client/views/footer/about.view.html
+++ b/public/blog/client/views/footer/about.view.html
@@ -8,6 +8,23 @@
 
 <h3 style="text-align: center">User with Gravatar image: starfall, Key: starfall</h3>
 
-<h3></h3>
+<br/>
+<br/>
+
+<div>
+<h4>In this project I use several apis and tools. </h4>
+
+    <h4> Api1 (OMDB API):
+    Link: http://omdbapi.com/ </h4>
+
+    <h4> Api2(Full Text Editor):
+    Link: http://textangular.com/ </h4>
+
+    <h4> Api3(Gravatar API):
+    Link: https://github.com/wallin/angular-gravatar </h4>
+
+    <h4> Api4(Twitter Button):
+    Link: https://about.twitter.com/zh-hans/resources/buttons</h4>
+</div>
 
 <h3 align="center"><a href="#/home">Home</a></h3>
